# ai_commit

./: .gitignore  CHANGELOG.md  README.md  pyinstaller.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  pypi_publish.yml
src/ai_commit/: ai-commit.py  ai_commit.py  config.py  config_test.py  default_config.py  notebook.ipynb
